--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -4,21 +4,22 @@ buildscript {
     gradlePluginPortal()
   }
   dependencies {
+    classpath "io.github.fourlastor:construo:1.4.2"
     if(enableGraalNative == 'true') {
       classpath "org.graalvm.buildtools.native:org.graalvm.buildtools.native.gradle.plugin:0.9.28"
     }
   }
 }
 plugins {
-  id "io.github.fourlastor.construo" version "1.4.1"
   id "application"
 }
+apply plugin: 'io.github.fourlastor.construo'
 
 
 import io.github.fourlastor.construo.Target
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
-mainClassName = 'com.AngryBirds.lwjgl3.Lwjgl3Launcher'
+mainClassName = 'io.github.some_example_name.lwjgl3.Lwjgl3Launcher'
 application.setMainClass(mainClassName)
 eclipse.project.name = appName + '-lwjgl3'
 java.sourceCompatibility = 11
@@ -86,7 +87,7 @@ construo {
         architecture.set(Target.Architecture.AARCH64)
         jdkUrl.set("https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.12%2B7/OpenJDK17U-jdk_aarch64_mac_hotspot_17.0.12_7.tar.gz")
         // macOS needs an identifier
-        identifier.set("com.AngryBirds." + appName)
+        identifier.set("io.github.some_example_name." + appName)
         // Optional: icon for macOS
         macIcon.set(project.file("icons/logo.icns"))
       }
@@ -94,7 +95,7 @@ construo {
         architecture.set(Target.Architecture.X86_64)
         jdkUrl.set("https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.12%2B7/OpenJDK17U-jdk_x64_mac_hotspot_17.0.12_7.tar.gz")
         // macOS needs an identifier
-        identifier.set("com.AngryBirds." + appName)
+        identifier.set("io.github.some_example_name." + appName)
         // Optional: icon for macOS
         macIcon.set(project.file("icons/logo.icns"))
       }
